place download authorization where user can choose to enable downloading intuitively.

--- a/app/src/main/res/layout-land/fragment_channel_properties.xml
+++ b/app/src/main/res/layout-land/fragment_channel_properties.xml
@@ -94,9 +94,13 @@
                             android:id="@+id/cancel_button"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginBottom="8dp"
                             android:text="@android:string/cancel" />
+
+                        <Button
+                            android:id="@+id/channelvideos"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Videos" />
                     </LinearLayout>
 
                 </LinearLayout>
