--- a/app/src/main/res/layout-land/fragment_video_properties.xml
+++ b/app/src/main/res/layout-land/fragment_video_properties.xml
@@ -189,10 +189,13 @@
                     android:id="@+id/closeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
                     android:text="Close" />
+
+                <Button
+                    android:id="@+id/gotochannel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Channel" />
             </LinearLayout>
         </ScrollView>
 
