--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -322,6 +322,12 @@
 
             </LinearLayout>
 
+            <Button
+                android:id="@+id/subscribetourl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Subscribe to URL" />
+
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
