--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -328,6 +328,12 @@
                 android:layout_height="wrap_content"
                 android:text="Subscribe to URL" />
 
+            <Button
+                android:id="@+id/help"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Help" />
+
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
