--- a/app/src/main/res/layout/smallvideolist.xml
+++ b/app/src/main/res/layout/smallvideolist.xml
@@ -7,7 +7,7 @@
     android:background="?attr/bgColor"
     cardview:cardElevation="3dp"
     cardview:cardUseCompatPadding="true">
-
+    android:focusable="true">
     <RelativeLayout
         android:id="@+id/RecView2"
         android:layout_width="match_parent"
