--- a/app/src/main/res/layout-land/smallvideolist.xml
+++ b/app/src/main/res/layout-land/smallvideolist.xml
@@ -8,13 +8,14 @@
     cardview:cardCornerRadius="10dp"
     cardview:cardElevation="3dp"
     android:background="?attr/bgColor"
-    cardview:cardUseCompatPadding="true">
+    cardview:cardUseCompatPadding="true"
+    android:focusable="true">
 
     <RelativeLayout
         android:id="@+id/RecView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/bgColor"
+        android:background="@drawable/item_selector"
         android:backgroundTint="#1AFFFFFF"
         android:foregroundTint="#1AFFFFFF">
 
