--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,52 +3,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:buttonTint="#FFFFFF"
     android:gravity="top"
     android:orientation="vertical"
-    android:paddingTop="16dp"
-    android:textColor="#000000"
-    android:buttonTint="#FFFFFF"
-    android:paddingEnd="16dp">
+    android:paddingTop="0dp"
+    android:paddingEnd="0dp"
+    android:textColor="#000000">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:textColor="#000000"
         android:buttonTint="#FFFFFF"
-        android:paddingTop="16dp">
+        android:orientation="horizontal"
+        android:textColor="#000000">
 
         <RadioGroup
             android:id="@+id/radio_search_type"
             android:layout_width="wrap_content"
-            android:textColor="#000000"
+            android:layout_height="wrap_content"
             android:buttonTint="#FFFFFF"
-            android:layout_height="wrap_content">
+            android:textColor="#000000">
 
             <RadioButton
                 android:id="@+id/radio_video"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
-                android:textColor="#FFFFFF"
                 android:buttonTint="#FFFFFF"
-                android:text="videos" />
+                android:checked="true"
+                android:text="videos"
+                android:textColor="#FFFFFF" />
 
             <RadioButton
                 android:id="@+id/radio_channel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
                 android:buttonTint="#FFFFFF"
-                android:text="channels" />
-            <Button
-                android:id="@+id/search_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:buttonTint="#FFFFFF"
-                android:text="Search" />
+                android:text="channels"
+                android:textColor="#FFFFFF" />
 
         </RadioGroup>
 
@@ -56,17 +49,51 @@
             android:id="@+id/search_youtube"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
+            android:layout_marginLeft="8dp"
             android:buttonTint="#FFFFFF"
-            android:text="youtube" />
+            android:text="youtube"
+            android:textColor="#FFFFFF" />
 
         <CheckBox
             android:id="@+id/search_bitchute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
             android:buttonTint="#FFFFFF"
-            android:text="bitchute" />
+            android:text="bitchute"
+            android:textColor="#FFFFFF" />
+
+        <CheckBox
+            android:id="@+id/search_Feed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="#FFFFFF"
+            android:text="Feed"
+            android:textColor="#FFFFFF" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="#FFFFFF"
+            android:text="Search"
+            android:textColor="#000000" />
+
+        <EditText
+
+            android:id="@+id/search_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="#FFFFFF"
+            android:inputType="text"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
@@ -74,21 +101,12 @@
         android:id="@+id/search_subfragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        android:textColor="#000000"
         android:buttonTint="#FFFFFF"
+        android:orientation="vertical"
+        android:textColor="#000000"
+        tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
-        <EditText
-
-            android:id="@+id/search_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:buttonTint="#FFFFFF"
-            android:inputType="text"
-            android:textColor="#FFFFFF" />
     </LinearLayout>
 
 
