--- a/app/src/main/res/layout-land/smallvideolist.xml
+++ b/app/src/main/res/layout-land/smallvideolist.xml
@@ -7,14 +7,14 @@
     android:orientation="horizontal"
     cardview:cardCornerRadius="10dp"
     cardview:cardElevation="3dp"
-    android:background="?attr/bgColor"
+    android:background="@drawable/item_selector"
     cardview:cardUseCompatPadding="true"
     android:focusable="true">
 
     <RelativeLayout
         android:id="@+id/RecView2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="240dp"
+        android:layout_height="180dp"
         android:background="@drawable/item_selector"
         android:backgroundTint="#1AFFFFFF"
         android:foregroundTint="#1AFFFFFF">
