--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
     <color name="lightblue">#03A9F4</color>
+    <color name="stupid">#008577</color>
+    <color name="dumb">#438577</color>
 </resources>
