--- a/app/src/main/res/drawable/item_selector.xml
+++ b/app/src/main/res/drawable/item_selector.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/black" android:state_pressed="true"/>
+    <item android:drawable="@color/lightblue" android:state_pressed="true"/>
+    <item android:drawable="@color/stupid" android:state_focused="true"/>
     <item android:drawable="@color/black" android:state_selected="true"/>
-    <item android:drawable="@color/black" android:state_focused="true"/>
 
-    <item android:drawable="@color/lightblue"></item>
+
+    <item android:drawable="@color/sicbackground"></item>
+
+
+
+    <selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <item android:state_focused="true" android:color="@color/lightblue"/>
+        <item android:state_pressed="true" android:state_enabled="false" android:color="@color/stupid" />
+        <item android:state_enabled="false" android:color="@color/black" />
+        <item android:color="@color/colorPrimary"/>
+    </selector>
+
+
+
+
 </selector>
