--- a/app/src/main/res/layout-land/smallvideolist.xml
+++ b/app/src/main/res/layout-land/smallvideolist.xml
@@ -2,14 +2,15 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="240dp"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="2dp"
+    android:clickable="true"
+    android:background="?android:attr/activatedBackgroundIndicator"
+    android:focusable="true"
     android:orientation="horizontal"
     cardview:cardCornerRadius="10dp"
     cardview:cardElevation="3dp"
-    android:background="@drawable/item_selector"
-    cardview:cardUseCompatPadding="true"
-    android:focusable="true">
+    cardview:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:id="@+id/RecView2"
@@ -75,7 +76,7 @@
             android:layout_alignParentEnd="false"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="40dp"
-            android:background="?attr/bgColor"
+            android:background="@drawable/item_selector"
             android:elevation="200dp"
             android:ems="10"
             android:paddingLeft="0dp"
@@ -91,7 +92,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:background="#80000000"
+            android:background="@drawable/item_selector"
             android:elevation="10dp"
             android:maxLines="3"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
